tests/snapshots/tests__command__about.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_0dbb4049'
Does really amazing things for great people

[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_0dbb4049
exit 0
