tests/snapshots/tests__command__allow_missing_positional_style_2-2.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_baz=('baz1' 'baz2' 'baz3')
