tests/snapshots/tests__command__args_conflicts_with_subcommands.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_2daedb11'
[1m[31merror:[0m the subcommand '[33mnested[0m' cannot be used with '[33m[input][0m'

[1m[4mUsage:[0m [1mmyprog test[0m [input]
       [1mmyprog test[0m <COMMAND>

For more information, try '[1m--help[0m'.
EOF_2daedb11
exit 1
